<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Attack me if u can</string>

    <!-- Delete this block once app is final -->
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">My Message</string>
    <!-- Delete this block once app is final -->


    <string name="button_OMTG_DATAST_001_BadEncryption">OMTG-DATAST-001-BadEnryption</string>
    <string name="title_activity_omtg__datast_001__bad_encryption">OMTG-DATAST-001-BadEnryption</string>
    <string name="textview_OMTG_DATAST_001_BadEncryption_Description">
        <b>Bad Encryption</b>\n
        Identify the password. Read the source and try to find out what kind of encryption is used.
    </string>
    <string name="title_activity_omtg__datast_001__BadEncryption">Password</string>
    <string name="button_activity_omtg__datast_001__BadEncryption_Password">Verify Password</string>


    <string name="button_OMTG_DATAST_001_KeyChain">OMTG-DATAST-001-KeyChain</string>
    <string name="title_activity_omtg__datast_001__key_chain">OMTG_DATAST_001_KeyChain</string>
    <string name="textview_OMTG_DATAST_001_Description">
        <b>Keychain Testcase</b>\n
        This testcase shows the import of a certificate into the KeyChain. Password is 1234.
    </string>

    <string name="button_OMTG_DATAST_001_KeyStore">OMTG-DATAST-001-KeyStore</string>
    <string name="title_activity_omtg__datast_001__key_store">OMTG_DATAST_001_KeyStore</string>
    <string name="title_activity_omtg__datast_001__key_store_cleartext">Clear Text</string>
    <string name="title_activity_omtg__datast_001__key_store_encrypted">Encrypt</string>
    <string name="title_activity_omtg__datast_001__key_store_decrypted">Decrypted</string>
    <string name="button_OMTG_DATAST_001_KeyStore_Decrypt">Decrypt</string>
    <string name="button_OMTG_DATAST_001_KeyStore_Encrypt">Encrypt</string>
    <string name="textview_OMTG_DATAST_001_KeyStore">
        <b>KeyStore Testcase</b>\n
        This testcase shows the best practice for creating securely a keypair with the KeyStore and use the keys to encrypt/decrypt a string.
    </string>

    <string name="title_activity_omtg__datast_004__external_storage">OMTG_DATAST_001_ExternalStorage</string>
    <string name="button_OMTG_DATAST_001_ExternalStorage">OMTG_DATAST_001_ExternalStorage</string>
    <string name="textview_OMTG_DATAST_001_ExternalStorage">
        <b>External Storage Testcase</b>\n
        A new external file has been created. Look for something interesting in it.
    </string>


    <string name="title_activity_omtg__datast_004__internal_storage">OMTG_DATAST_001_InternalStorage</string>
    <string name="button_OMTG_DATAST_001_InternalStorage">OMTG_DATAST_001_InternalStorage</string>
    <string name="textview_OMTG_DATAST_001_InternalStorage">
        <b>Internal Storage Testcase</b>\n
        A new internal file has been created. Look for something interesting in it.
    </string>

    <string name="title_activity_omtg__datast_004__sharedpreferences">OMTG_DATAST_001</string>
    <string name="button_OMTG_DATAST_001_SharedPreferences">OMTG-DATAST-001-Shared Preferences</string>
    <string name="textview_OMTG_DATAST_001_SharedPreferences">
        <b>Shared Preferences Testcase</b>\n
        A new shared preference file has been created. Look for something interesting in it.
    </string>

    <string name="title_activity_omtg__datast_004__sqlite">OMTG_DATAST_001_SQLite</string>
    <string name="button_OMTG_DATAST_001_SQLite">OMTG_DATAST_001_SQLite</string>
    <string name="textview_OMTG_DATAST_001_SQLite">
        <b>SQLite Testcase</b>\n
        A new SQLite database has been created. Look for something interesting in it.
    </string>

    <string name="title_activity_omtg__datast_004__sqlite__secure">OMTG_DATAST_004_SQLite_Secure
    </string>
    <string name="title_activity_omtg__datast_004__sqliteSecure">OMTG_DATAST_001_SQLite-Encrypted</string>
    <string name="button_OMTG_DATAST_001_SQLiteEncrypted">OMTG_DATAST_001_SQLite-Encrypted</string>
    <string name="textview_OMTG_DATAST_001_SQLiteEncrypted">
        <b>SQLite Testcase (Encrypted)</b>\n
        A new encrypted SQLite database has been created. Try do decrypt it.
    </string>

    <string name="title_activity_omtg__datast_002__logging">OMTG_DATAST_002_Logging</string>
    <string name="button_OMTG_DATAST_002_Logging">OMTG_DATAST_002_Logging</string>
    <string name="title_activity_omtg__datast_002__logging_username">Username</string>
    <string name="title_activity_omtg__datast_002__logging_password">Password</string>
    <string name="button_OMTG_DATAST_002_Login">Login</string>
    <string name="textview_OMTG_DATAST_002_Logging">
        <b>Logging Testcase</b>\n
        Look for something interesting in the generated log output.
    </string>


    <string name="title_activity_omtg__datast_005">OMTG_DATAST_004_3rd_Party</string>
    <string name="button_OMTG_DATAST_004_3rd_Party">OMTG_DATAST_004_3rd_Party</string>
    <string name="textview_OMTG_DATAST_004_3rd_Party">
        <b>3rd Party Libraries Testcase</b>\n
        This app has a 3rd Party Library called ACRA that will send details of a crash to their server. What can you see in Burp?
    </string>
    <string name="button_OMTG_DATAST_004_3rd_Party_Crash">Crash the App</string>

    <string name="title_activity_omtg__datast_005__keyboard__cache">OMTG_DATAST_005_Keyboard_Cache
    </string>
    <string name="button_OMTG_DATAST_005_Keyboard_Cache">OMTG_DATAST_005_Keyboard_Cache</string>
    <string name="textview_OMTG_DATAST_005_Keyboard_Cache">Test Case to show deactivated Keyboard Cache in EditText.</string>
    <string name="title_activity_omtg__datast_052__keyboard_cache">Enter sensitive information here</string>


    <string name="title_activity_omtg__datast_006__clipboard">OMTG_DATAST_006_Clipboard</string>
    <string name="button_OMTG_DATAST_006_Clipboard">OMTG_DATAST_006_Clipboard</string>
    <string name="textview_OMTG_DATAST_006_Clipboard">Test Case to show deactivated Clipboard in EditText.</string>


    <string name="title_activity_omtg__datast_007__memory">OMTG_DATAST_011_Memory</string>
    <string name="button_OMTG_DATAST_011_Memory">OMTG_DATAST_011_Memory</string>
    <string name="textview_OMTG_DATAST_011_Memory">
        <b>Memory Testcase</b>\n
        Make a dump of the memory. Identify the function that was called for this activity and get the decrypted string.
    </string>


    <string name="button_OMTG_CODING_003_SQL_Injection">OMTG_CODING_003_SQL_Injection</string>
    <string name="title_activity_omtg__coding_003__sql__injection">OMTG_CODING_003_SQL_Injection</string>
    <string name="textview_OMTG_CODING_003_SQL_Injection">OMTG_CODING_003_SQL_Injection</string>
    <string name="title_activity_omtg__coding_003__sql__injection_username">Username</string>
    <string name="title_activity_omtg__coding_003__sql__injection_password">Password</string>
    <string name="button_OMTG_CODING_003_SQL_Injection_Login">Login</string>

    <string name="title_activity_omtg__coding_003__sql__injection__content__provider">
        OMTG_CODING_003_SQL_Injection_Content_Provider
    </string>
    <string name="textview_OMTG_CODING_003_SQL_Injection_Content_Provider">Content Provider</string>
    <string name="button_OMTG_CODING_003_SQL_Injection_Content_Provider">OMTG-Coding-003-SQL_Injection_Content_Provider</string>
    <string name="title_activity_omtg__coding_003__best__practice">OMTG_CODING_003_Best_Practice
    </string>
    <string name="button_OMTG_CODING_003_Best_Practice">OMTG_Coding_003_Best_Practice</string>
    <string name="textview_OMTG_CODING_003_Best_Practice">OMTG_Coding_003_Best_Practice</string>
    <string name="title_activity_omtg__coding_004__code__injection">OMTG_CODING_004_Code_Injection
    </string>
    <string name="button_OMTG_CODING_003_Code_Injection">OMTG_CODING_004_Code_Injection</string>
    <string name="title_activity_omtg__env_005__web_view">OMTG_ENV_005_WebView_Remote</string>
    <string name="button_OMTG_ENV_005_Webview">OMTG_ENV_005_Webview_Remote</string>
    <string name="title_activity_omtg__env_005__web_view__local">OMTG_ENV_005_WebView_Local</string>
    <string name="button_OMTG_ENV_005_Webview_Local">OMTG_ENV_005_WebView_Local</string>

    <string name="button_OMTG_NETW_001_Secure_Channel">OMTG_NETW_001_Secure_Channel</string>
    <string name="title_OMTG_NETW_001_Secure_Channel">OMTG_NETW_001_Secure_Channel</string>
    <string name="textview_OMTG_NETW_001_Secure_Channel">Inspect the traffic and try reading the packet data</string>
    <string name="textview1_OMTG_NETW_001_Secure_Channel"><b>1. Insecure web page</b></string>
    <string name="textview2_OMTG_NETW_001_Secure_Channel"><b>2. Secure web page</b></string>

    <string name="url_example">http://example.com</string>
    <string name="url_example_ssl">https://example.com</string>

    <string name="title_activity_omtg__netw_004__ssl__pinning">OMTG_NETW_004_SSL_Pinning</string>
    <string name="textview_OMTG_NETW_004_SSL_Pinning">Check with an interception Proxy if you can intercept the communication.</string>
    <string name="button_OMTG_NETW_004_SSL_Pinning">OMTG_NETW_004_SSL_Pinning</string>
    <string name="title_activity_omtg__netw_004__ssl__pinning__certificate">
        OMTG_NETW_004_SSL_Pinning_Certificate
    </string>
    <string name="textview_OMTG_NETW_004_SSL_Pinning_Whole_Cert">This HTTPS request is pinned against the whole certificate</string>
    <string name="button_OMTG_NETW_004_SSL_Pinning_Whole_Cert">OMTG_NETW_004_SSL_Pinning_Whole_Cert</string>

</resources>