<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_omtg__datast_001__key_store"
    tools:context="sg.vp.owasp_mobile.OMTG_Android.OMTG_DATAST_001_KeyStore">

    <TextView
        android:id="@+id/keyStoreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_OMTG_DATAST_001_KeyStore"
        android:paddingTop="120px"/>

    <EditText
        android:id="@+id/startText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/keyStoreText"
        android:layout_centerHorizontal="true"
        android:hint="@string/title_activity_omtg__datast_001__key_store_cleartext"/>

    <EditText
        android:id="@+id/encryptedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/startText"
        android:layout_centerHorizontal="true"
        android:editable="false"
        android:textIsSelectable="true"
        android:hint="@string/title_activity_omtg__datast_001__key_store_encrypted"/>

    <EditText
        android:id="@+id/decryptedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/encryptedText"
        android:layout_centerHorizontal="true"
        android:editable="false"
        android:textIsSelectable="true"
        android:hint="@string/title_activity_omtg__datast_001__key_store_decrypted"/>

    <Button
        android:id="@+id/KeyStoreEncrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/decryptedText"
        android:text="@string/button_OMTG_DATAST_001_KeyStore_Encrypt" />

    <Button
        android:id="@+id/KeyStoreDecrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/KeyStoreEncrypt"
        android:text="@string/button_OMTG_DATAST_001_KeyStore_Decrypt" />


</RelativeLayout>
</ScrollView>
