<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_omtg__datast_002__logging"
    tools:context="sg.vp.owasp_mobile.OMTG_Android.OMTG_DATAST_002_Logging">

    <TextView
        android:id="@+id/loggingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_OMTG_DATAST_002_Logging"
        android:paddingTop="10px"/>

    <EditText
        android:id="@+id/loggingUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loggingTextView"
        android:hint="@string/title_activity_omtg__datast_002__logging_username"/>

    <EditText
        android:id="@+id/loggingPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loggingUsername"
        android:inputType="textPassword"
        android:hint="@string/title_activity_omtg__datast_002__logging_password"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loggingPassword"
        android:text="@string/button_OMTG_DATAST_002_Login" />

</RelativeLayout>
