<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_omtg__coding_003__sql__injection"
    tools:context="sg.vp.owasp_mobile.OMTG_Android.OMTG_CODING_003_SQL_Injection">

    <TextView
        android:id="@+id/sqlInjectionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_OMTG_CODING_003_SQL_Injection"
        android:paddingTop="10px"/>

    <EditText
        android:id="@+id/sqlInjectionUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sqlInjectionTextView"
        android:hint="@string/title_activity_omtg__coding_003__sql__injection_username"/>

    <EditText
        android:id="@+id/sqlInjectionPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sqlInjectionUsername"
        android:hint="@string/title_activity_omtg__coding_003__sql__injection_password"/>

    <Button
        android:id="@+id/sqlInjectionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sqlInjectionPassword"
        android:text="@string/button_OMTG_CODING_003_SQL_Injection_Login" />


</RelativeLayout>
