<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_omtg__datast_001__bad_encryption"
    tools:context="sg.vp.owasp_mobile.OMTG_Android.OMTG_DATAST_001_BadEncryption">

    <TextView
        android:id="@+id/TextViewBadEnryption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_OMTG_DATAST_001_BadEncryption_Description"
        android:paddingTop="10px"/>

    <EditText
        android:id="@+id/BadEnryptionPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextViewBadEnryption"
        android:layout_centerHorizontal="true"
        android:hint="@string/title_activity_omtg__datast_001__BadEncryption"/>

    <Button
        android:id="@+id/BadEnryptionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/BadEnryptionPassword"
        android:text="@string/button_activity_omtg__datast_001__BadEncryption_Password" />

</RelativeLayout>
