<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_omtg__netw_001__secure__channel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_omtg__netw_001__secure__channel"
    tools:context="sg.vp.owasp_mobile.OMTG_Android.OMTG_NETW_001_Secure_Channel">


    <TextView
        android:text="@string/textview_OMTG_NETW_001_Secure_Channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="8dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/textview1_OMTG_NETW_001_Secure_Channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <WebView
        android:id="@+id/webView1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <WebView
        android:id="@+id/webView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="15dp" />

    <TextView
        android:text="@string/textview2_OMTG_NETW_001_Secure_Channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/textView4"
        android:layout_below="@+id/webView1"
        android:layout_alignParentStart="true" />

</RelativeLayout>
